--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ html {
   height: 100%;
   font-family: sans-serif;
   letter-spacing: 2px;
-  background-color: rgb(197, 214, 168);
 }
 .title {
   color: rgb(206, 164, 86);
@@ -194,7 +193,7 @@ img {
 /* ===============> Contact Section <=========== */
 
 section.contactcontainer {
-  background-color: rgb(197, 214, 168);
+  /* background-color: rgb(197, 214, 168); */
   display: grid;
   place-items: center;
   padding: 2rem 0;
@@ -214,7 +213,7 @@ section.contactcontainer {
 }
 
 .contact__button {
-  color: rgb(241, 236, 236);
+  /* color: rgb(241, 236, 236); */
   border: none;
   outline: none;
   font-size: 1.25rem;
@@ -363,7 +362,6 @@ section.contactcontainer {
   }
 
   section.contactcontainer {
-    background-color: rgb(197, 214, 168);
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -385,4 +383,17 @@ section.contactcontainer {
 #submitbtn,
 #empmessage {
   font-size: 1.25rem;
+}
+
+/* ===========> Dark Mode <============ */
+
+body {
+  background-color: rgb(197, 214, 168);
+  color: rgba(0, 0, 0, 0.753);
+  transition: all 1s ease-out;
+}
+
+body.light {
+  background-color: rgba(0, 0, 0, 0.753);
+  color: rgba(231, 231, 231, 0.897);
 }
